# howto_edit_website

./: .gitignore  autobuild.ps1  pyproject.toml
.github/workflows/: documentation.yaml
source/: conf.py  index.md
source/_static/: custom.css
source/_templates/: template.docx
source/contents_edit/: index.md
source/environment/: index.md  install_git.md  install_hugo.md  setup_github.md  setup_vscode.md
