[project]
name = "TwinCATHowTo"
version = "0.1.0"
description = ""
authors = ["Takashi Ichihashi <t.ichihashi@beckhoff.co.jp>"]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "sphinx",
    "myst-parser",
    "sphinx-book-theme",
    "sphinx-markdown-tables",
    "sphinxcontrib-actdiag",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-blockdiag",
    "sphinxcontrib-seqdiag",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jquery",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-nwdiag",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-seqdiag",
    "sphinxcontrib-serializinghtml",
    "sphinxcontrib-youtube",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design"
]
